# salt

./: .gitignore  .gitmodules  CMakeLists.txt  GNUmakefile  GNUmakefile.in  LICENSE  README.md  README.ms  Salt.sln  Todo.txt  acg.pl  changelog  configure  configure.ac  index.txt  lib-test-gtk.prj  makefile  salt.prj  test.scss
Documentation/: vt220-rm.tgz
Lib/: MAcceleratorTable.cpp  MAcceleratorTable.h  MAlerts.cpp  MAnimation.cpp  MAnimation.h  MAnimationImpl.cpp  MAnimationImpl.h  MApplication.cpp  MApplication.h  MApplicationImpl.h  MCairoGfxDeviceImpl.cpp  MCairoGfxDeviceImpl.h  MCanvas.cpp  MCanvas.h  MCanvasImpl.h  MClipboard.cpp  MClipboard.h  MClipboardImpl.h  MColor.cpp  MColor.h  MColorPicker.cpp  MColorPicker.h  MController.cpp  MController.h  MControls.cpp  MControls.h  MControls.inl  MControlsImpl.h  MDevice.cpp  MDevice.h  MDeviceImpl.h  MDialog.cpp  MDialog.h  MDocApplication.cpp  MDocApplication.h  MDocClosedNotifier.cpp  MDocWindow.cpp  MDocWindow.h  MDocument.cpp  MDocument.h  (+42 more)
Resources/: MakeRes.pl
Salt/: App.xaml  App.xaml.cs  AppResources.Designer.cs  AppResources.resx  BigInteger.cs  SSH.cs  Salt.csproj  Terminal.cs  TerminalPage.xaml  TerminalPage.xaml.cs
Sources/: MAuthDialog.h  MCSICommands.h  MConnectDialog.h  MHTTPProxy.cpp  MHTTPProxy.h  MLibTestApp.cpp  MLibTestApp.h  MPortForwardingDialog.h  MPreferencesDialog.cpp  MPreferencesDialog.h  MSaltApp.h  MSaltVersion.h.tmpl  MSearchPanel.h  MTerminalChannel.cpp  MTerminalChannel.h  MTerminalColours.cpp  MTerminalWindow.h
cmake/: salt.desktop.in
doc/: vt102-ug.tgz  vte.sh
lib/: CMakeLists.txt  MAcceleratorTable.cpp  MAcceleratorTable.hpp  MAlerts.cpp  MAlerts.hpp  MAnimation.cpp  MAnimation.hpp  MAnimationImpl.cpp  MAnimationImpl.hpp  MApplication.cpp  MApplication.hpp  MApplicationImpl.hpp  MCairoGfxDeviceImpl.cpp  MCairoGfxDeviceImpl.hpp  MCanvas.cpp  MCanvas.hpp  MCanvasImpl.hpp  MClipboard.cpp  MClipboard.hpp  MClipboardImpl.hpp  MColor.cpp  MColor.hpp  MColorPicker.cpp  MColorPicker.hpp  MCommands.hpp  MConfig.hpp  MConfig.hpp.in  MController.cpp  MController.hpp  MControls.cpp  MControls.hpp  MControls.inl  MControlsImpl.hpp  MDevice.cpp  MDevice.hpp  MDeviceImpl.hpp  MDialog.cpp  MDialog.hpp  MDocApplication.cpp  MDocApplication.hpp  (+43 more)
lib/Gtk/: MGtkAlerts.cpp  MGtkAnimationImpl.cpp  MGtkApplicationImpl.cpp  MGtkApplicationImpl.hpp  MGtkCanvasImpl.cpp  MGtkCanvasImpl.hpp  MGtkClipboardImpl.cpp  MGtkControlsImpl.cpp  MGtkControlsImpl.hpp  MGtkControlsImpl.inl  MGtkDeviceImpl.cpp  MGtkDeviceImpl.hpp  MGtkDialogImpl.cpp  MGtkDocClosedNotifier.cpp  MGtkError.cpp  MGtkFile.cpp  MGtkLib.hpp  MGtkList.cpp  MGtkList.hpp  MGtkMain.cpp  MGtkMenu.cpp  MGtkResources.cpp  MGtkSound.cpp  MGtkSshAgentImpl.cpp  MGtkSshAgentImpl.hpp  MGtkUtils.cpp  MGtkWidgetMixin.cpp  MGtkWidgetMixin.hpp  MGtkWindowImpl.cpp  MGtkWindowImpl.hpp
lib/Resources/: color-picker.xml
lib/Windows/: MWinAlerts.cpp  MWinAnimationImpl.cpp  MWinApplicationImpl.cpp  MWinCanvasImpl.cpp  MWinCanvasImpl.hpp  MWinClipboardImpl.cpp  MWinControlsImpl.cpp  MWinControlsImpl.hpp  MWinDeviceImpl.cpp  MWinDeviceImpl.hpp  MWinDialogImpl.cpp  MWinExploreBrowserView.cpp  MWinExploreBrowserView.hpp  MWinFile.cpp  MWinLib.hpp  MWinListViewImpl.cpp  MWinListViewImpl.hpp  MWinMain.cpp  MWinMenuImpl.cpp  MWinMenuImpl.hpp  MWinPreferences.cpp  MWinProcMixin.cpp  MWinProcMixin.hpp  MWinResources.cpp  MWinUtils.cpp  MWinUtils.hpp  MWinWindowImpl.cpp  MWinWindowImpl.hpp  comptr.hpp
lib/X11/: MPrimary.cpp  MPrimary.hpp  MX11Alerts.cpp  MX11AnimationImpl.cpp  MX11ApplicationImpl.cpp  MX11ApplicationImpl.hpp  MX11CanvasImpl.cpp  MX11CanvasImpl.hpp  MX11ClipboardImpl.cpp  MX11ControlsImpl.cpp  MX11ControlsImpl.hpp  MX11DeviceImpl.cpp  MX11DeviceImpl.hpp  MX11DialogImpl.cpp  MX11Error.cpp  MX11File.cpp  MX11Lib.hpp  MX11Main.cpp  MX11Menu.cpp  MX11Resources.cpp  MX11Utils.cpp  MXcbAlerts.cpp  MXcbAnimationImpl.cpp  MXcbApplicationImpl.cpp  MXcbApplicationImpl.hpp  MXcbCairoSurface.cpp  MXcbCairoSurface.hpp  MXcbCanvasImpl.cpp  MXcbCanvasImpl.hpp  MXcbClipboardImpl.cpp  MXcbControlsImpl.cpp  MXcbControlsImpl.hpp  MXcbDeviceImpl.cpp  MXcbDeviceImpl.hpp  MXcbDialogImpl.cpp  MXcbError.cpp  MXcbFile.cpp  MXcbLib.hpp  MXcbMain.cpp  MXcbMenu.cpp  (+9 more)
lib/include/: MAlerts.hpp  MAnimationImpl.hpp  MApplication.hpp  MApplicationImpl.hpp  MClipboard.hpp  MClipboardImpl.hpp  MColor.hpp  MController.hpp  MControls.hpp  MControls.inl  MControlsImpl.hpp  MDevice.hpp  MDeviceImpl.hpp  MDocument.hpp  MExploreBrowserView.hpp  MFile.hpp  MListView.hpp  MMenu.hpp  MPreferences.hpp  MTypes.hpp  MUnicode.hpp  MUnicodeTables.hpp  MUtils.hpp  MView.hpp  MWindow.hpp  MWindowImpl.hpp
lib/include/Gtk/: MGtkApplicationImpl.hpp  MGtkCanvasImpl.hpp  MGtkControlsImpl.hpp  MGtkControlsImpl.inl  MGtkLib.hpp  MGtkList.hpp  MGtkWidgetMixin.hpp  MGtkWindowImpl.hpp  MPrimary.hpp
lib/include/Windows/: MWinApplicationImpl.hpp  MWinCanvasImpl.hpp  MWinDeviceImpl.hpp  MWinLib.hpp  MWinListViewImpl.hpp  MWinMenuImpl.hpp  comptr.hpp
lib/src/: MAcceleratorTable.cpp  MAlerts.cpp  MApplication.cpp  MColor.cpp  MColorPicker.cpp  MController.cpp  MControls.cpp  MDialog.cpp  MDocApplication.cpp  MDocClosedNotifier.cpp  MDocument.cpp  MError.cpp  MFile.cpp  MGfxDevice.cpp  MHandler.cpp  MMenu.cpp  MPreferences.cpp  MStrings.cpp  MTypes.cpp  MWindow.cpp
lib/src/Gtk/: MGtkAlerts.cpp  MGtkAnimationImpl.cpp  MGtkApplicationImpl.cpp  MGtkCanvasImpl.cpp  MGtkClipboardImpl.cpp  MGtkControlsImpl.cpp  MGtkDeviceImpl.cpp  MGtkDialogImpl.cpp  MGtkDocClosedNotifier.cpp  MGtkError.cpp  MGtkFile.cpp  MGtkList.cpp  MGtkMain.cpp  MGtkMenu.cpp  MGtkSound.cpp  MGtkUtils.cpp  MGtkWidgetMixin.cpp  MGtkWindowImpl.cpp  MPrimary.cpp
lib/src/Windows/: MWinAnimationImpl.cpp  MWinCanvasImpl.cpp  MWinDialogImpl.cpp  MWinFile.cpp  MWinLib.cpp  MWinMain.cpp  MWinMenuImpl.cpp  MWinSound.cpp  MWinUtils.cpp
libassh/: GNUmakefile  assh-test.prj
manual/: CMakeLists.txt  conf.py.in  salt.rst  tips.html
msvc/: description.manifest  salt.sln  salt.vcxproj  salt.vcxproj.filters
rsrc/: salt-prompt.sh  salt-scripts.sh  version.rc  (+3 more)
(+236 files in other folders)
